- terminatorX can now be run suid root - and it might even be safe. After
  creating the engine thread both terminatorX threads drop root privileges
  before evaluating any parameters or reading/writing files, etc. The problem
  is the pthread "manager thread" is out of control of terminatorX code - so
  I cannot tell that thread to drop privileges.
- Fixed Drag'n'Drop for GNOME 2
- Deleted tons of old outdated code in tX_engine.cc and tX_mastergui.cc

[v3.72]
- Applied a patch from Matthew Evans <activesx@hotmail.com> that introduces 
  support for Ogg Vorbis audiofiles. It requires ogg123 > RC2 and sox to work.
  Autodetection is supported via configure (--enable-ogg123).
- Experimental support for input devices other than the core-pointer
  under XFree86 > 4. This uses the xsetpointer executable that comes with
  XFree86. configure should autodetect this correctly, in case it doesn't
  use the --enable-xetpointer switch.
- Adrian sent me a patch introducing two new buttons: mute and solo. As it
  didn't fully harmonize with the sequencer I rewrote parts of it and added new
  functionality to the turntables: They can now be switched to mix_solo or
  mix_mute - these settings affect current mixing only - their values will
  neither be saved nor will changes to those control be recorded in the
  sequencer - if you want to record muting events either use the mute button
  from the turntable's trigger menu, the keyboard short-cuts (alt/strg), or
  your middle mouse button.
- fixed a bug that produced corrupt wavfiles on big endian machines
- some minor fixes to make terminatorX compile with newer gcc releases
- Well, I am allowed to change my mind, aren't I? Anyway, 3DNow! is back.
  Nevertheless newer gcc releases seem to have a bug in handling movq and
  the current 3DNow! stereo implementation does not seem to be very efficient.
  So use --enable-3dnow only if you want to help me improve perfomance.